# bootcamp_2025

./: .env.example  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
Class_Documents/: Class_1.md  Class_4.md
_init-scripts/: 01-create-postgres-user.sh
classes/: class_1.md
data_analysis/: main.py  pyproject.toml
data_analysis/src/: database.py
exercises/: exercises_1.py
tiny_project/: README.md  main.py  pyproject.toml
tiny_project/db/: __init__.py
tiny_project/notebooks/: analysis.ipynb
tiny_project/web/: __init__.py  api_client.py  web_scraper.py
