[project]
name = "tiny-project"
version = "0.1.0"
description = "A simple data analysis project"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "matplotlib>=3.10.7",
  "sqlalchemy>=2.0.0",
  "psycopg>=3.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "jupyter>=1.0.0",
  "nbconvert>=7.0.0",
]
